# GenericKit

./: .cmake.conf  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  SKILL.md
.opencode/: oh-my-openagent.jsonc  opencode.json
apis/cpp/gkit-media/examples/: CMakeLists.txt
apis/cpp/gkit-media/examples/square-gen/: CMakeLists.txt
apis/wasm/: CMakeLists.txt  note
apis/wasm/gkit-core/: Cargo.toml
apis/wasm/gkit-core/src/: lib.rs
apis/wasm/gkit-media/: Cargo.toml
bindings/cpp/gkit-media/examples/: CMakeLists.txt
bindings/cpp/gkit-media/examples/square-gen/: CMakeLists.txt  main.cpp
bindings/cpp/gkit-media/tests/: CMakeLists.txt
bindings/csharp/: .gitignore  CMakeLists.txt
bindings/csharp/gkit-core/: Cargo.toml
bindings/csharp/gkit-media/: CMakeLists.txt
bindings/csharp/gkit-media/src/: lib.rs
bindings/flutter/: CMakeLists.txt
bindings/flutter/gkit-core/: CMakeLists.txt  Cargo.toml
bindings/flutter/gkit-media/: CMakeLists.txt
bindings/flutter/gkit-media/src/api/: hello.rs  mod.rs
cmake/: AGENTS.md  FindWrapBenchmark.cmake  (+19 more)
crates/gkit-core/: Cargo.toml  build.rs
crates/gkit-core-uniffi/: Cargo.toml  build.rs
crates/gkit-core-uniffi/src/: gkit_core.udl  lib.rs
crates/gkit-core/src/: lib.rs  version.rs
crates/gkit-core/src/plugin/: backend.rs  discovery.rs  error.rs  loader.rs  mod.rs
crates/gkit-core/tests/plugin/: backend.rs  discovery.rs  loader.rs  main.rs
crates/gkit-core/tests/plugin/mock_plugin/: Cargo.toml
crates/gkit-core/tests/plugin/mock_plugin/src/: lib.rs
crates/gkit-media/: AGENTS.md  Cargo.toml  build.rs
crates/gkit-media-ffi/: CMakeLists.txt  build.rs  cbindgen.toml
crates/gkit-media-ffi/examples/: CMakeLists.txt
crates/gkit-media-ffi/tests/: CMakeLists.txt  test_basic.c  test_data_channel.c  test_rtc_factory.c  test_sdp.c  test_video_frame.c
crates/gkit-media-wasm/: Cargo.toml
crates/gkit-media-wasm/examples/square-gen/: CMakeLists.txt  index.html
crates/gkit-media-wasm/examples/webrtc-loopback/: CMakeLists.txt  index.html  package-lock.json  package.json  playwright.config.mjs  test-loopback.mjs  test.mjs  webrtc-loopback.test.mjs
crates/gkit-media-wasm/src/: lib.rs
crates/gkit-media/examples/gkit-media-square-gen/: CMakeLists.txt  main.rs
crates/gkit-media/examples/gkit-media-viewer/: CMakeLists.txt  main.rs
crates/gkit-media/examples/gkit-media-webrtc-loopback/: CMakeLists.txt  main.rs
crates/gkit-media/plugins/: CMakeLists.txt
crates/gkit-media/plugins/webrtc/libwebrtc/: Cargo.toml
crates/gkit-media/plugins/webrtc/libwebrtc/src/: lib.rs
crates/gkit-media/plugins/webrtc/libwebrtc/src/adapt/: convert.rs  data_channel.rs  desktop_capturer.rs  factory.rs  ice.rs  mod.rs  peer_connection.rs  rtp.rs  session_description.rs  stats.rs  video_frame.rs  video_track.rs
crates/gkit-media/plugins/webrtc/web-sys/: Cargo.toml
crates/gkit-media/plugins/webrtc/web-sys/src/: lib.rs
crates/gkit-media/src/: .gitignore  lib.rs
crates/gkit-media/src/build-sys/: mod.rs
crates/gkit-media/src/build-sys/webrtc-sys/: apm.rs  audio_mixer.rs  audio_resampler.rs  audio_track.rs  data_channel.rs  desktop_capturer.rs  frame_cryptor.rs  helper.rs  jsep.rs  media_stream.rs  media_stream_track.rs  packet_trailer.rs  peer_connection.rs  peer_connection_factory.rs  rtc_error.rs  rtp_parameters.rs  rtp_receiver.rs  rtp_sender.rs  rtp_transceiver.rs  video_frame.rs  video_frame_buffer.rs  video_track.rs  webrtc.rs
crates/gkit-media/src/capture/: generator.rs
crates/gkit-media/src/plugin/: registry.rs
crates/gkit-media/src/protocols/rtc/client/: core.rs  engine.rs  engine_macros.rs  mod.rs  wasm.rs
crates/gkit-media/src/protocols/rtc/client/native/: google.rs  mod.rs  webrtc_rs.rs  webrtc_rs_impl.rs
crates/gkit-media/src/protocols/rtc/client/native/google_lk/: audio_source.rs  audio_stream.rs  audio_track.rs  data_channel.rs  desktop_capturer.rs  ice_candidate.rs  media_stream.rs  media_stream_track.rs  mod.rs  peer_connection.rs  peer_connection_factory.rs  prelude.rs  rtp_parameters.rs  rtp_receiver.rs  rtp_sender.rs  rtp_transceiver.rs  session_description.rs  stats.rs  video_frame.rs  video_source.rs  video_stream.rs  video_track.rs
crates/gkit-media/src/protocols/rtc/client/native/google_lk/native/: android.rs  apm.rs  audio_mixer.rs  audio_resampler.rs  audio_source.rs  audio_stream.rs  audio_track.rs  data_channel.rs  desktop_capturer.rs  frame_cryptor.rs  ice_candidate.rs  media_stream.rs  media_stream_track.rs  mod.rs  packet_trailer.rs  peer_connection.rs  peer_connection_factory.rs  rtp_parameters.rs  rtp_receiver.rs  rtp_sender.rs  rtp_transceiver.rs  session_description.rs  video_frame.rs  video_source.rs  video_stream.rs  video_track.rs  yuv_helper.rs
crates/gkit-media/src/protocols/rtc/client/native/google_lk/web/: data_channel.rs  media_stream.rs
crates/gkit-media/src/protocols/rtc/client/native/livekit_rs/: audio_track.rs  data_channel.rs  factory.rs  frame_cryptor.rs  ice.rs  mod.rs  peer_connection.rs  rtp.rs  session_description.rs  stats.rs  video_frame.rs  video_track.rs
crates/gkit-media/src/protocols/rtc/peer/: core.rs  engine.rs  engine_macros.rs  mod.rs
crates/gkit-media/src/trait/: mod.rs  video_sink_stabby.rs  webrtc_stabby.rs
crates/gkit-media/src/video/: adapter.rs  buffer.rs  convert.rs  frame.rs  frame_stabby.rs  mod.rs  source_sink.rs  transform.rs
crates/gkit-media/src/webrtc/client/: core.rs  wasm.rs
crates/gkit-media/src/webrtc/client/native/: google.rs  mod.rs  webrtc_rs.rs
crates/gkit-media/tests/: plugin_load.rs  test_source_sink.rs  video_frame_basic.rs  video_frame_buffer.rs  video_frame_convert.rs  video_frame_stabby.rs  video_frame_transform.rs  video_sink_stabby.rs  webrtc_basic.rs  webrtc_data_channel.rs  webrtc_errors.rs  webrtc_ice.rs  webrtc_lk_basic.rs  webrtc_lk_p2p.rs  webrtc_offer_answer.rs  webrtc_p2p.rs  webrtc_p2p_conn.rs  webrtc_states.rs  webrtc_track.rs
crates/gkit-media/tests/common/: mod.rs
tools/gkit-vcpkg/: AGENTS.md  CMakeLists.txt  Cargo.toml
tools/gkit-vcpkg/src/: main.rs
(+85 files in other folders)
